# aatt-snowflake

./: .gitignore  AATT_Sample.md  Brochure.md  README.md  Snowflake.md  pyproject.toml  washing_list.md
.devcontainer/: devcontainer.json  example.env
dbt/: .env.example  .gitignore  README.md  dbt_run.py  load-env.ps1
dbt/dbt_project/: dbt_project.yml  requirements.txt
dbt/streamlit_app/: requirements.txt  streamlit_app.py
dlt/: README.md  docker-compose.yml  extract.py  requirements.txt
dlt/queries/: 001_schema_and_seed.sql
graphing/: README.md
graphing/streamlit_apps/: aatt_demo_provider_counts.py
notebook/: AATT_DEMO_NOTEBOOK.ipynb  README.md  aggregate_funcs.py  country_region_num.json  helper_funcs.py  mystery_users.txt  region_name.json  resultparser.py  school_users.txt  skinlabels_aatt-subject-images.csv  skinlabels_fae-test-data.csv
phoenix/: benchmark_answer_relevancy.py  client.py  create_dataset.py  deploy.sh  evaluate_rag.py  evaluate_retriever.py
phoenix/metrics/: __init__.py  answer_accuracy.py  answer_relevance.py  spell_checker.py
phoenix/tasks/: __init__.py  rag_task.py  retriever_task.py
ps_rag/: Dockerfile  Dockerfile-retriever  Dockerfile-vectordb  Makefile  README.md  __init__.py  app.py  build_vector_db.py  rag.py  requirements.txt  session.py  stage_docs.py  t.py
ps_rag/chart/: README.md
ps_rag/client/: client.py
ps_rag/src/: api.py  client.py  prompt.txt  rag.py  requirements.txt  retriever_api.py  util.py
ps_rag/terraform/: .terraform.lock.hcl  (+4 more)
reporting/: DJ.md
setup_example/: README.md  setup-workspace.txt
(+70 files in other folders)
