[project]
name = "aatt-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=12.16.0",
    "arize-phoenix-client>=1.24.0",
    "arize-phoenix-otel>=0.14.0",
    "chromadb>=1.3.5",
    "deepeval>=3.7.2",
    "langchain>=1.0.8",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.0.3",
    "openinference-instrumentation-openai>=0.1.40",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "ragas==0.3.7",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
packages = ["ps_rag"]
